iss#240 Get rid of separate test-data folder: ServiceProcessLoadMP3Test migration